-Fixed UL styling bug. 
-PHP tag fixes.
-Fixed jQuery no-conflict issue in the slider (not sure how undone).
-Fixed bug related to previous Featured Image fix.
-Fixed some theme elements not showing upon activation: header, footer, post byline elements. 
-Added fix for non-keymaster admins not having access to theme option in multisite. 
-Added missing No Tile option to custom backgrounds. 

Version 3.0.1 (11-27-11)
-Fixed issue with galleries in single post pages. 
-Changed search result text from h2 to h3, removed unnecessary font size attribute. 
-Minor change to credit link option.
-Reduced background image file size.
-Added Dark Blue color option.
-Fixed Featured Image's showing up on single post page.

Version 3.0 (11-26-11)
-Introduction of CyberChimps Core WordPress Framework. 
-New Theme Options panel using Classy Options Framework.
-Introduction of Drag and Drop page elements. 
-Introduction of custom CSS grid.
-Added Featured Post carousel.
-New theme design, includes bordered post and page containers, modified post layout.
-Removed SuperFish, using CSS menu. 
-Twitterbar added for use on a per-page basis. 
-Post formats support added.
-New social icon set added.
-Added post pagination links to single.php.

Version 2.0.2 (10-05-11)
-Small patch related to footer widgetized area.

Version 2.0.2 (10-04-11)
-Added Flickr and Myspace social icons. 
-Added breadcrumb links to single post, page, archive, and search templates. 
-Added max-width and height:auto to full-size images to fix blowout issue. 
-Floats now properly clearing. 
-Post pagination added to main blog index page. 
-register_sidebar calls now within a function hooked into widgets_init. 
-Added styling to definition list title and text elements.
-Added link to theme settings in the admin bar. 

Version 2.0.1 (8-05-11)
-Removed TimThumb, replaced with WordThumb for increased security.
-Added option to disable image resizing on iFeature Pro Slider. 