@@ -150,6 +150,7 @@ TEMPLATE_URL . '/images/social/thumbs/icons-default.png' ), 'default' => 'defaul
 			->multicheck($themeslug."_hide_byline", "Post Byline Elements", array( 'options' => array($themeslug."_hide_author" => "Author" , $themeslug."_hide_categories" => "Categories", $themeslug."_hide_date" => "Date", $themeslug."_hide_comments" => "Comments", $themeslug."_hide_share" => "Share", $themeslug."_hide_tags" => "Tags"), 'default' => array( $themeslug."_hide_tags" => true, $themeslug."_hide_share" => true, $themeslug."_hide_author" => true, $themeslug."_hide_date" => true, $themeslug."_hide_comments" => true, $themeslug."_hide_categories" => true ) ) )
 			->checkbox($themeslug."_show_fb_like", "Facebook Like Button")
 			->checkbox($themeslug."_show_gplus", "Google Plus One Button")
+			->checkbox($themeslug."_post_pagination", "Post Pagination Links",  array('default' => true))
 		->subsection_end()->subsection("Blog Slider")
 			->checkbox($themeslug."_hide_slider_blog", "Index iFeatre Slider", array('default' => true))
 			->select($themeslug."_slider_size", "Select the Slider Size", array( 'options' => array("key1" => "half", "key2" => "full")))
