@@ -12,6 +12,7 @@ Version 3.0.2 (11-30-11)
 -Fixed some theme elements not showing upon activation: header, footer, post byline elements. 
 -Added fix for non-keymaster admins not having access to theme option in multisite. 
 -Added missing No Tile option to custom backgrounds. 
+-Added option to enable/disable post pagination links. 
 
 Version 3.0.1 (11-27-11)
 -Fixed issue with galleries in single post pages. 
